[package]
name = "ppm_viewer"
version = "0.1.0"
authors = ["dhruvdh <dhruv.dhamani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha6"
winit_input_helper =  "0.4.0-alpha6"
pixels = { git = "https://github.com/parasyte/pixels.git" }
env_logger = "0.7.1"
log = { version = "0.4", features = ["release_max_level_warn"] }