[package]
name = "dip_viewer"
version = "0.0.2"
authors = ["dhruvdh <dhruv.dhamani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha6"
winit_input_helper =  "0.4.0-alpha6"
pixels = { git = "https://github.com/parasyte/pixels.git" }
env_logger = "0.7.1"
log = { version = "0.4", features = ["release_max_level_warn"] }
serde_json = "1.0.45"
clap = "2.33.0"
